# rust-axum-api

./: .env  Cargo.toml  Makefile  docker-compose.yml
.github/workflows/: unit-testing.yml
migrations/: 20230430080355_init.sql  20230501001605_create_labels_table.sql
src/: handlers.rs  main.rs  repositories.rs
src/handlers/: label_handler.rs  mod.rs  todo_handler.rs
src/models/: label.rs  todo.rs
src/repositories/: label_repository.rs  mod.rs  todo_repository.rs
