[package]
name = "manpuku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
hyper = { version = "0.14.10", features = ["full"] }
tokio = { version = "1.9.0", features = ["full"] }
tower = "0.4.12"
mime = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
anyhow = "1.0.44"
thiserror = "1.0.35"